Fix long username bleed over message in pm threads

--- a/web/less/frontend/modules/messages.less
+++ b/web/less/frontend/modules/messages.less
@@ -105,9 +105,9 @@
 
 td.sender {
 	width: 120px;
-  white-space: nowrap;
 	padding-left: 10px;
 	padding-right: 10px;
+  word-wrap: break-word;
 }
 
 td.subject {
